--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 * {
   padding: 0;
   margin: 0;
- 
 }
 
 body,
@@ -62,7 +61,8 @@ html {
 .container {
   margin-bottom: 10%;
 }
-.display-1,.cubeText {
+.display-1,
+.cubeText {
   font-family: "Pacifico", cursive;
 }
 
@@ -202,7 +202,6 @@ html {
 }
 .nav-item:hover {
   transform: translate(0%, -10%);
-  
 }
 .nav-item:active {
   transform: scale(0.9);
@@ -358,7 +357,7 @@ html {
 }
 #card {
   position: relative;
-  height:600px;
+  height: 600px;
 }
 .photo-card {
   transition: all 0.5s;
@@ -469,32 +468,13 @@ html {
 }
 
 /* CSS for experience Page */
-.timeline {
-  position: relative;
-  width: 100%;
-  height: fit-content;
-  margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 10%;
-}
 
-.timeline::after {
-  content: "";
-  position: absolute;
-  width: 6px;
-  height: 100%;
-  background-color: var(--dec-color);
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  margin-left: -3px;
-  z-index: 50;
-}
 .single-experience {
   /* border: 2px solid #ddd; */
   position: relative;
   opacity: 0;
   height: fit-content;
+  margin: 20px;
 }
 .single-experience-animation {
   animation: zoomIn 1s ease forwards;
@@ -503,7 +483,7 @@ html {
 
 .single-experience .content {
   position: relative;
-  width: 50%;
+  /* width: 50%; */
   height: fit-content;
   background: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
@@ -514,9 +494,9 @@ html {
 }
 .single-experience .content .back {
   position: absolute;
-  width:100%;
-  height:100%;
-   border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(50px);
   -webkit-backdrop-filter: blur(50px);
@@ -524,13 +504,10 @@ html {
   transform: translate(0%, 100%);
 }
 
-.left.single-experience .content:hover {
-  transform: translateX(-10%);
-}
-.single-experience .content:hover .back{
-    transition: 1s;
-    transform: translate(0%,0%);
-    opacity: 1;
+.single-experience .content:hover .back {
+  transition: 1s;
+  transform: translate(0%, 0%);
+  opacity: 1;
 }
 
 .single-experience .content .experience-time {
@@ -541,30 +518,13 @@ html {
   font-size: 1.2rem;
   font-weight: 900;
 }
-.single-experience .content .experience-keywords{
+.single-experience .content .experience-keywords {
   font-weight: 500;
 }
-.single-experience .content .experience-image{
-  margin:auto;
+.single-experience .content .experience-image {
+  margin: auto;
 }
 
-.right.single-experience .content {
-  position: relative;
-  transform: translate(105%, 0);
-}
-
-.right.single-experience .content:hover {
-  transform: translateX(120%);
-}
-.left.single-experience .content .experience-time {
-  position: relative;
-  transform: translate(30%, 0);
-}
-
-.right.single-experience .content .experience-time {
-  position: relative;
-  transform: translate(-30%, 0);
-}
 /* CSS for Skills Section */
 .portrait {
   width: 200px;
@@ -762,12 +722,12 @@ html {
   animation-duration: 4s;
 }
 
-.App{
-  cursor: url('cat.png'),auto;
+.App {
+  cursor: url("cat.png"), auto;
 }
-a:hover, a:active{
-  cursor: url('cat.png'),auto;
-
+a:hover,
+a:active {
+  cursor: url("cat.png"), auto;
 }
 
 @keyframes squareRotate {
@@ -974,24 +934,73 @@ a:hover, a:active{
       -20vmax -40vmax, 60vmax 60vmax;
   }
 }
-
-/* @keyframes welcome-1 {
-  0% {
-    transform: scale(1);
-    opacity: 1;
+/* CSS for Experience section when screens narrower than 430px */
+@media (min-width: 1220px) {
+  .single-experience .content {
+    width: 50%;
   }
-  100% {
-    transform: scale(0.8) rotate(-90deg) translateY(-300%);
+  .timeline {
+    position: relative;
+    width: 100%;
+    height: fit-content;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 10%;
+  }
+
+  .timeline::after {
+    content: "";
+    position: absolute;
+    width: 6px;
+    height: 100%;
+    background-color: var(--dec-color);
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+    z-index: 50;
+  }
+
+  .left.single-experience .content:hover {
+    transform: translateX(-10%);
+  }
+
+  .right.single-experience .content {
+    position: relative;
+    transform: translate(105%, 0);
+  }
+
+  .right.single-experience .content:hover {
+    transform: translateX(120%);
+  }
+  .left.single-experience .content .experience-time {
+    position: relative;
+    transform: translate(30%, 0);
+  }
+
+  .right.single-experience .content .experience-time {
+    position: relative;
+    transform: translate(-30%, 0);
   }
 }
-
-@keyframes welcome-2 {
-  0% {
-    transform: scale(1);
-    opacity: 1;
+@media (max-width: 767px) {
+  .threeJSCanvas {
+    display: none;
   }
-  100% {
-    transform: scale(1.2) translate(10%, 10%);
-    opacity: 1;
+  #experience {
+    padding-top: 300px;
   }
-} */
+}
+/* CSS for screens narrower than 430px */
+@media (max-width: 470px) {
+  #home {
+    display: none;
+  }
+  .name-animation::before {
+    left: 50px;
+    animation: none;
+  }
+  #experience {
+    margin-top: 100px;
+  }
+}
